<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--INTERNET-->
    <string name="internet_connection_error">Internet Connection Error</string>

    <string name="tab2_check_all_events">All</string>
    <string name="tab2_check_my_events">My</string>

    <!--WELCOME PAGE-->
    <string name="str_welcome_page">WELCOME!!!</string>


    <string name="map_key_debug">AIzaSyC-Iyyi6EHspS_sRpmIW-wjtmvBBgDkXTo</string>
    <string name="map_key_release">AIzaSyAWyFvnFOEi00BGtIwCzCIHI4I7q4k6MEA</string>

    <string name="no_events">No events</string>


    <string name="tab1">Featured</string>
    <string name="tab2">All</string>
    <string name="tab3">Filter</string>
    <string name="tab4">Favorites</string>
    <string name="tab5">Settings</string>

    <!-- Placeholder strings -->
    <string name="app_name">Barteguiden</string>
    <string name="p_price">100 kr</string>
    <string name="p_band">Bare Egil Band</string>
    <string name="p_place">Samfundet</string>
    <string name="p_date">22. Juli</string>
    <string name="p_time">12:00</string>
    <string name="p_age">15+</string>
    <string name="action_search">Search</string>
    <string name="search_current_tab">Search this tab</string>
    <string name="join_me">join me</string>
    <string name="share">Share</string>
    <string name="free">Free</string>
    <string name="goto_web">Web page</string>
    <string name="open_map">Open map</string>
    <string name="description">Description</string>
    <string name="add_calendar">Add to calendar</string>
    <string name="filter_options">Filter</string>
    <string name="pref_title_filter_options">Filter age</string>
    <string name="pref_summary_filter_age">Filter out events you can\'t attend</string>
    <string name="pref_title_categories">Visible categories</string>
    <string name="filter">Filter</string>
    <string name="pref_title_set_age">Age</string>
    <string name="pref_summary_set_age">Set your age</string>
    <string name="pref_title_filter_free">Only free</string>
    <string name="pref_summary_filter_free">Only show free events</string>
    <string name="calendar_added">Added to calendar!</string>
    <string name="list_empty_header">Your list is empty!</string>
    <string name="list_empty_desc">Favorite something!!</string>
    <string name="list_empty_desc_cont">What did you really expect?</string>
    <string name="event_in_trondheim">Event in Trondheim</string>
    <string name="update_db">Updating the database. This might take a few seconds...</string>
    <string name="setup_title">Setup</string>
    <string name="setup_desc1">Barteguiden needs to initialize itself</string>
    <string name="setup_desc2">Don\'t wory; this will only take a few seconds, and an internet connection</string>

</resources>
